tests-e2e/tests/snapshots/lsp__invalid_runtime_sources_configuration.snap
---
source: tests-e2e/tests/lsp.rs
---
{
  "message": "Invalid Iris settings: unknown field `sources`, expected `diagnostics`. The previous Iris settings remain active.",
  "type": 1
}
