tests-e2e/tests/snapshots/lsp__late_workspace_progress_creation.snap
---
source: tests-e2e/tests/lsp.rs
---
[
  {
    "cancellable": true,
    "kind": "begin",
    "message": "Discovering Spago workspace",
    "percentage": 0,
    "title": "Preparing Iris workspace"
  },
  {
    "kind": "end",
    "message": "Workspace preparation finished"
  }
]
