tests-e2e/tests/snapshots/lsp__nested_package_workspace_symbol.snap
---
source: tests-e2e/tests/lsp.rs
---
[
  {
    "kind": 12,
    "location": {
      "range": {
        "end": {
          "character": 22,
          "line": 1
        },
        "start": {
          "character": 0,
          "line": 1
        }
      },
      "uri": "[WORKSPACE]/packages/application/src/Library.purs"
    },
    "name": "fromWorkspaceRoot"
  }
]
