tests-e2e/tests/snapshots/lsp__prepared_workspace_symbol.snap
---
source: tests-e2e/tests/lsp.rs
---
[
  {
    "kind": 12,
    "location": {
      "range": {
        "end": {
          "character": 19,
          "line": 1
        },
        "start": {
          "character": 0,
          "line": 1
        }
      },
      "uri": "[WORKSPACE]/src/Library.purs"
    },
    "name": "fromFreshClone"
  }
]
